Fix background color flickering

--- a/src/App/wwwroot/css/_anonymous.scss
+++ b/src/App/wwwroot/css/_anonymous.scss
@@ -2,7 +2,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
 
-    background: url(../images/bg/login-overlay.png), center url(../images/bg/login.jpg);
+    background: url(../images/bg/login-overlay.png), center url(../images/bg/login.jpg) $body-bg;
     background-size: cover;
 
     top-menu {
